# HHMI_Janelia_AI_Engineer

./: .gitignore  LICENSE  README.md  annotations.json  main.py  params.yaml  pyproject.toml  requirements.txt  task1_ans.md  template.py
OUTPUT/: inputdata_summary.txt  inputdata_summary1.txt  model_summary.txt  model_summary_hf.txt  withinRet.json
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_modelbuild.ipynb  03_retrival_visualization.ipynb  04_crossretrival.ipynb  05_multiquery.ipynb
src/task1/: best_model.pt  results.json  task1_ans.md
src/task1/data/: protein_fitness.csv
src/task2/: __init__.py  task2_ans.md
src/task2/components/: cross_retrival.py  data_ingestion.py  modelbuild.py  multiquery.py  within_retrival.py
src/task2/config/: configuration.py
src/task2/entity/: config.py
src/task2/pipeline/: stage1.py  stage2.py  stage3.py  stage4.py  stage5.py
src/task2/utils/: common.py
