[project]
name = "hhmi-janelia-ai-engineer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "dagshub>=0.6.9",
    "dvc>=3.67.1",
    "ensure>=1.0.4",
    "fastapi>=0.135.2",
    "fibsem-tools>=7.0.5",
    "hf>=1.9.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jinja2>=3.1.6",
    "joblib>=1.5.3",
    "matplotlib>=3.7.0",
    "mlflow>=3.10.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-box>=7.4.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "quilt3>=7.2.0",
    "s3fs>=2026.3.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.17.1",
    "termcolor>=3.3.0",
    "torch>=2.0.0",
    "torchinfo>=1.8.0",
    "torchmetrics>=1.9.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.0",
    "uvicorn>=0.42.0",
    "xarray>=2026.2.0",
    "zarr>=2.18.7",
]
